--- a/index.html
+++ b/index.html
@@ -11,104 +11,96 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
   <style>
-  body {
-    font-family: 'Orbitron', sans-serif;
-  }
-
-  @keyframes borderGlow {
-    0% {
-      background-position: 0% 50%;
+    body {
+      font-family: 'Orbitron', sans-serif;
     }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
+   /* Animasi border hijau neon dan putih */
+@keyframes borderGlow {
+  0% {
+    background-position: 0% 50%;
   }
-
-  .skill-border {
-    position: relative;
-    padding: 3px;
-    border-radius: 16px;
-    background: linear-gradient(90deg, #ffffff, #39ff14, #ffffff);
-    background-size: 300% 300%;
-    animation: borderGlow 5s ease infinite;
-    width: fit-content;
-    margin: auto;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  50% {
+    background-position: 100% 50%;
   }
-
-  .skill-border:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 15px #39ff14;
+  100% {
+    background-position: 0% 50%;
   }
+}
 
-  .skill-card {
-    background-color: #0f172a;
-    color: white;
-    border-radius: 12px;
-    padding: 2rem;
-    text-align: center;
-    width: 150px;
-    height: 180px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 1rem;
-  }
+.skill-border {
+  position: relative;
+  padding: 3px;
+  border-radius: 16px;
+  background: linear-gradient(90deg, #ffffff, #39ff14, #ffffff);
+  background-size: 300% 300%;
+  animation: borderGlow 5s ease infinite;
+  width: fit-content;
+  margin: auto;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 
-  .skill-card img {
-    width: 48px;
-    height: 48px;
-    margin: 0 auto;
-  }
-</style>
+.skill-border:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px #39ff14;
+}
 
+.skill-card {
+  background-color: #0f172a;
+  color: white;
+  border-radius: 12px;
+  padding: 2rem;
+  text-align: center;
+  width: 150px;
+  height: 180px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.skill-card img {
+  width: 48px;
+  height: 48px;
+  margin: 0 auto;
+}
+
+  </style>
 </head>
 <body class="bg-gray-900 text-green-400 min-h-screen">
-
-  <!-- Navbar -->
+<!-- Navbar -->
 <nav class="flex items-center justify-between px-6 py-4 bg-gray-800 shadow-md fixed top-0 left-0 right-0 z-50">
   <!-- Logo -->
   <a href="#home" class="flex items-center space-x-3 group">
-    <!-- Huruf "E" dalam lingkaran -->
-    <div class="w-12 h-12 rounded-full bg-gradient-to-br from-green-400 to-white text-black font-extrabold text-3xl flex items-center justify-center shadow-lg transition-all duration-500 transform group-hover:rotate-12 group-hover:scale-110"
-         style="font-family: 'Playfair Display', serif;">
+    <div class="w-12 h-12 rounded-full bg-gradient-to-br from-green-400 to-white text-black font-extrabold text-3xl flex items-center justify-center shadow-lg transition-all duration-500 transform group-hover:rotate-12 group-hover:scale-110" style="font-family: 'Playfair Display', serif;">
       E
     </div>
-
-    <!-- Tulisan PORTOFOLIO -->
     <span class="text-2xl font-bold bg-gradient-to-r from-green-400 to-white bg-clip-text text-transparent tracking-wide transition duration-500">
       PORTOFOLIO
     </span>
   </a>
 
-  <!-- Hamburger Menu (mobile only) -->
+  <!-- Hamburger Menu -->
   <button id="menu-toggle" class="md:hidden text-white focus:outline-none">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
       <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
     </svg>
   </button>
 
-  <!-- Navigation Links -->
-  <ul id="menu" class="hidden md:flex flex-col md:flex-row md:items-center space-y-4 md:space-y-0 md:space-x-6 text-sm absolute md:static top-16 left-0 w-full md:w-auto bg-gray-800 md:bg-transparent px-6 md:px-0 py-4 md:py-0 shadow-md md:shadow-none">
-    <li><a href="#home" class="text-white hover:text-green-300 transition duration-300">Home</a></li>
-    <li><a href="#about" class="text-white hover:text-green-300 transition duration-300">About</a></li>
-    <li><a href="#skills" class="text-white hover:text-green-300 transition duration-300">Skill</a></li>
-    <li><a href="#projects" class="text-white hover:text-green-300 transition duration-300">Project</a></li>
-    <li><a href="#sertifikat" class="text-white hover:text-green-300 transition duration-300">Sertifikat</a></li>
-    <li><a href="#kontak" class="text-white hover:text-green-300 transition duration-300">Contact</a></li>
+  <!-- Navigation Menu -->
+  <ul id="menu" class="hidden flex-col md:flex md:flex-row md:items-center space-y-4 md:space-y-0 md:space-x-6 text-sm absolute md:static top-16 left-0 w-full md:w-auto bg-gray-800 md:bg-transparent px-6 md:px-0 py-4 md:py-0 shadow-md md:shadow-none z-40 transition-all duration-300 ease-in-out">
+    <li><a href="#home" class="text-white hover:text-green-300 transition duration-300 block">Home</a></li>
+    <li><a href="#about" class="text-white hover:text-green-300 transition duration-300 block">About</a></li>
+    <li><a href="#skills" class="text-white hover:text-green-300 transition duration-300 block">Skill</a></li>
+    <li><a href="#projects" class="text-white hover:text-green-300 transition duration-300 block">Project</a></li>
+    <li><a href="#sertifikat" class="text-white hover:text-green-300 transition duration-300 block">Sertifikat</a></li>
+    <li><a href="#kontak" class="text-white hover:text-green-300 transition duration-300 block">Contact</a></li>
   </ul>
 </nav>
-
  <!-- Home Section -->
 <section id="home" 
   class="relative flex flex-col lg:flex-row items-center justify-between gap-12 px-6 lg:px-20 pt-32 pb-20 bg-cover bg-center min-h-screen"
   style="background-image: url('asset/bg1.jpg');">
-  
-  <!-- Overlay -->
-  <div class="absolute inset-0 bg-black bg-opacity-70 z-0"></div>
+  <div class="absolute inset-0 bg-black bg-opacity-40 z-0"></div>
 
   <!-- Left Content -->
   <div class="lg:w-1/2 flex flex-col items-center lg:items-start text-center lg:text-left space-y-6 z-10" data-aos="fade-right">
@@ -118,8 +110,7 @@
         ELIYA NUR AR RAHMADAN
       </span>
     </h1>
-
-    <p class="text-green-300 text-lg md:text-xl font-medium max-w-xl drop-shadow" data-aos="fade-up" data-aos-delay="200">
+  <p class="text-green-300 text-lg md:text-xl font-medium max-w-xl drop-shadow" data-aos="fade-up" data-aos-delay="200">
      Membuat Website yang Kreatif, Responsif, dan Interaktif untuk mendukung Transformasi Digital yang Lebih Baik.
     </p>
 
@@ -130,16 +121,17 @@
     </a>
   </div>
 
-  <!-- Right Content: Foto besar + Glow neon -->
-  <div class="lg:w-1/2 flex justify-center z-10" data-aos="fade-left">
+  <!-- Right Content -->
+  <div class="lg:w-1/2 w-full flex justify-center z-10" data-aos="fade-left">
     <div class="relative group">
       <img src="asset/PROFIL.png" 
            alt="Foto Eliya" 
-           class="w-[320px] sm:w-[400px] md:w-[480px] h-auto object-cover rounded-3xl shadow-[0_0_60px_15px_rgba(34,197,94,0.5)] transition-transform duration-500 transform group-hover:scale-105">
+           class="w-[240px] sm:w-[320px] md:w-[400px] h-auto object-cover rounded-3xl shadow-[0_0_60px_15px_rgba(34,197,94,0.5)] transition-transform duration-500 transform group-hover:scale-105">
     </div>
   </div>
 </section>
-<!-- About -->
+
+ <!-- About -->
 <section id="about" class="bg-gray-950 text-green-300 py-24 px-6 lg:px-20">
   <div class="max-w-7xl mx-auto flex flex-col-reverse lg:flex-row items-center justify-between gap-16">
 
@@ -177,55 +169,71 @@
   </div>
 </section>
 
-  <section id="skills" class="bg-gray-950 py-24 px-6 lg:px-20">
-  <div class="max-w-7xl mx-auto">
-    <h2 class="text-4xl sm:text-5xl font-extrabold text-center text-white mb-12">
+  <!-- Skills -->
+<section id="skills" class="bg-gray-950 py-24 px-6 lg:px-20">
+  <div class="max-w-7xl mx-auto text-center">
+    <h2 class="text-4xl sm:text-5xl font-extrabold text-white mb-16" data-aos="fade-up">
       My <span class="bg-gradient-to-r from-green-400 to-white bg-clip-text text-transparent">Skills</span>
     </h2>
 
-    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6 justify-center items-center">
-      <div class="skill-border">
+    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-8">
+      
+      <!-- Skill Item HTML5 -->
+      <div class="skill-border" data-aos="zoom-in" data-aos-delay="100">
         <div class="skill-card">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML" />
-          <span class="text-lg font-semibold">HTML</span>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5">
+          <p>HTML5</p>
         </div>
       </div>
-      <div class="skill-border">
+
+      <!-- Skill Item CSS3 -->
+      <div class="skill-border" data-aos="zoom-in" data-aos-delay="200">
         <div class="skill-card">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS" />
-          <span class="text-lg font-semibold">CSS</span>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3">
+          <p>CSS3</p>
         </div>
       </div>
-      <div class="skill-border">
+
+      <!-- Skill Item Bootstrap -->
+      <div class="skill-border" data-aos="zoom-in" data-aos-delay="300">
         <div class="skill-card">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt="JavaScript" />
-          <span class="text-lg font-semibold">JavaScript</span>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt="Bootstrap">
+          <p>Bootstrap</p>
         </div>
       </div>
-      <div class="skill-border">
+
+      <!-- Skill Item Tailwind -->
+      <div class="skill-border" data-aos="zoom-in" data-aos-delay="400">
         <div class="skill-card">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt="React" />
-          <span class="text-lg font-semibold">React</span>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-original.svg" alt="Tailwind CSS">
+          <p>Tailwind CSS</p>
         </div>
       </div>
-      <div class="skill-border">
+
+      <!-- Skill Item JavaScript -->
+      <div class="skill-border" data-aos="zoom-in" data-aos-delay="500">
         <div class="skill-card">
-          <img src="asset/tailwindcss.svg" alt="Tailwind" />
-          <span class="text-lg font-semibold">Tailwind</span>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
+          <p>JavaScript</p>
         </div>
       </div>
-      <div class="skill-border">
+
+      <!-- Skill Item PHP -->
+      <div class="skill-border" data-aos="zoom-in" data-aos-delay="600">
         <div class="skill-card">
-          <img src="asset/github.svg" alt="GitHub" />
-          <span class="text-lg font-semibold">GitHub</span>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
+          <p>PHP</p>
         </div>
       </div>
-      <div class="skill-border">
+
+      <!-- Skill Item Laravel -->
+      <div class="skill-border" data-aos="zoom-in" data-aos-delay="700">
         <div class="skill-card">
-          <img src="asset/figma.svg" alt="Figma" />
-          <span class="text-lg font-semibold">Figma</span>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" alt="Laravel">
+          <p>Laravel</p>
         </div>
       </div>
+
     </div>
   </div>
 </section>
@@ -515,9 +523,12 @@
 </footer>
 
 <!-- Tambahkan link ke Font Awesome -->
+<!-- Tambahkan link ke Font Awesome dan AOS -->
 <script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+
 <script>
+  // ==== Handle Submit Form Contact ====
   const form = document.getElementById("contactForm");
 
   form.addEventListener("submit", async function (e) {
@@ -531,7 +542,6 @@
 
     if (res.ok) {
       form.reset();
-
       Swal.fire({
         icon: 'success',
         title: 'Sent!',
@@ -547,36 +557,42 @@
       });
     }
   });
-  const toggleBtn = document.getElementById('toggleProjectsBtn');
-  const toggleText = toggleBtn.querySelector('span');
-  const toggleIcon = document.getElementById('toggleIcon');
-  const hiddenCards = document.querySelectorAll('.project-card.hidden');
 
-  let isExpanded = false;
+  // ==== Toggle Show More/Less Projects ====
+  const toggleProjectsBtn = document.getElementById('toggleProjectsBtn');
+  if (toggleProjectsBtn) {
+    const toggleText = toggleProjectsBtn.querySelector('span');
+    const toggleIcon = document.getElementById('toggleIcon');
+    const hiddenCards = document.querySelectorAll('.project-card.hidden');
+    let isExpanded = false;
 
-  toggleBtn.addEventListener('click', () => {
-    isExpanded = !isExpanded;
+    toggleProjectsBtn.addEventListener('click', () => {
+      isExpanded = !isExpanded;
 
-    hiddenCards.forEach(card => {
-      card.classList.toggle('hidden');
+      hiddenCards.forEach(card => {
+        card.classList.toggle('hidden');
+      });
+
+      toggleText.textContent = isExpanded ? 'Show Less' : 'Show More';
+      toggleIcon.textContent = isExpanded ? '▲' : '▼';
     });
+  }
 
-    toggleText.textContent = isExpanded ? 'Show Less' : 'Show More';
-    toggleIcon.textContent = isExpanded ? '▲' : '▼';
-  });
-
-  const menuToggle = document.getElementById('menu-toggle');
+  // ==== Toggle Navbar Menu ====
+  const menuToggleBtn = document.getElementById('menu-toggle');
   const menu = document.getElementById('menu');
 
-  menuToggle.addEventListener('click', () => {
-    menu.classList.toggle('hidden');
-  });
+  if (menuToggleBtn && menu) {
+    menuToggleBtn.addEventListener('click', () => {
+      menu.classList.toggle('hidden');
+    });
+  }
 
+  // ==== Init AOS Animation ====
   AOS.init({
     duration: 1000,
     once: true
   });
-
 </script>
 </body>
 </html>
