--- a/index.html
+++ b/index.html
@@ -88,23 +88,21 @@
   </div>
 </div>
 </section>
-<section id="about" class="bg-gray-950 text-green-300 py-16 px-4 sm:px-6 lg:px-20">
-  <div class="max-w-screen-xl mx-auto flex flex-col-reverse lg:flex-row items-center justify-between gap-12">
-
-    <!-- Image -->
+<section id="about" class="bg-black text-white py-16 px-4 sm:px-6 lg:px-20">
+  <div class="max-w-7xl mx-auto flex flex-col-reverse lg:flex-row items-center justify-between gap-12">
+<!-- Gambar Bagian -->
     <div class="w-full lg:w-1/2 flex justify-center" data-aos="fade-right">
-      <div class="w-64 h-64 sm:w-72 sm:h-72 lg:w-80 lg:h-80 rounded-3xl overflow-hidden border-4 border-green-500 shadow-xl shadow-green-400/30 transition-transform duration-300 hover:scale-105">
-        <img src="asset/Profill (2).png" alt="Foto" class="w-full h-full object-cover object-top" />
+      <div class="w-64 h-64 sm:w-72 sm:h-72 lg:w-80 lg:h-80 rounded-3xl overflow-hidden border-4 border-green-500 shadow-lg shadow-green-400/40 transition-transform duration-300 hover:scale-105">
+        <img src="asset/Profill (2).png" alt="Foto Profil" class="w-full h-full object-cover object-top" />
       </div>
     </div>
-
-    <!-- Teks -->
+    <!-- Text Bagian -->
     <div class="w-full lg:w-1/2 space-y-6 text-center lg:text-left" data-aos="fade-left">
-      <h2 class="text-3xl sm:text-4xl md:text-5xl font-extrabold text-white leading-tight">
-        About <span class="bg-gradient-to-r from-green-400 to-white bg-clip-text text-transparent">Me</span>
+      <h2 class="text-3xl sm:text-4xl font-extrabold text-white">
+        Tentang <span class="text-green-400">Saya</span>
       </h2>
-      <h3 class="text-xl sm:text-2xl font-semibold text-green-400">
-        <i class="fas fa-user-circle mr-2"></i> Who Am I?
+      <h3 class="text-xl font-semibold text-green-400">
+        <i class="fas fa-user-circle mr-2"></i> Siapa Saya?
       </h3>
       <p class="text-base sm:text-lg text-gray-300 leading-relaxed max-w-xl mx-auto lg:mx-0" data-aos="fade-up" data-aos-delay="300">
         Hello! Aku adalah seorang <span class="font-semibold text-green-400">Frontend Developer</span> yang antusias membangun tampilan web yang elegan, interaktif, dan mobile-friendly. Aku berpengalaman menggunakan <span class="font-semibold text-green-400">React, Tailwind CSS</span>, dan <span class="font-semibold text-green-400">JavaScript</span>.  
@@ -112,13 +110,12 @@
         Aku percaya bahwa teknologi yang dipadukan dengan desain yang menarik bisa menciptakan pengalaman pengguna yang luar biasa. Di luar coding, aku suka baca hal random, eksperimen UI tengah malam, dan nyeduh kopi sambil nyari inspirasi.
       </p>
 
-      <div class="pt-4">
-        <a href="asset/CV ELIYA.pdf" target="_blank"
-          class="inline-flex items-center gap-2 px-6 py-2 rounded-full font-semibold text-white bg-gradient-to-r from-green-500 to-teal-500 hover:from-green-600 hover:to-teal-600 transition duration-300">
-          <i class="fas fa-file-pdf"></i> Lihat CV
-        </a>
-      </div>
+      <a href="asset/CV ELIYA.pdf" target="_blank"
+        class="inline-flex items-center gap-2 px-6 py-2 rounded-full font-semibold text-white bg-gradient-to-r from-green-500 to-teal-500 hover:from-green-600 hover:to-teal-600 transition duration-300">
+        <i class="fas fa-file-pdf"></i> Lihat CV
+      </a>
     </div>
+
   </div>
 </section>
 
