--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portofolio Eliya</title>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     .skill-border {
@@ -102,16 +102,15 @@
 </nav>
 
 <!-- Home Section -->
-<section id="home" class="relative flex flex-col lg:flex-row items-center justify-between gap-12 px-6 lg:px-20 pt-32 mt-[64px] pb-20 bg-cover bg-center min-h-screen" style="background-image: url('asset/bg1.jpg');">
-  <!-- Overlay -->
-  <div class="absolute inset-0 bg-black bg-opacity-70 z-0"></div>
-
+<section id="home" class="relative flex flex-col lg:flex-row items-center justify-between gap-12 px-6 lg:px-20 pt-32 pb-20 bg-cover bg-center min-h-screen"
+  style="background-image: url('asset/bg1.jpg');">
+  
   <!-- Left Content -->
   <div class="lg:w-1/2 flex flex-col items-center lg:items-start text-center lg:text-left space-y-6 z-10" data-aos="fade-right">
     <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight tracking-wide text-white drop-shadow-lg" data-aos="fade-up">
       I'm <span class="text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-lime-300 to-white animate-gradient">ELIYA NUR AR RAHMADAN</span>
     </h1>
-    <p class="text-green-300 text-lg md:text-xl font-medium max-w-xl drop-shadow" data-aos="fade-up" data-aos-delay="200">
+    <p class="text-white text-lg md:text-xl font-medium max-w-xl drop-shadow" data-aos="fade-up" data-aos-delay="200">
       Membuat Website yang Kreatif, Responsif, dan Interaktif untuk mendukung Transformasi Digital yang Lebih Baik.
     </p>
     <a href="#kontak" class="mt-4 inline-block px-8 py-3 rounded-full font-semibold text-white bg-gradient-to-r from-green-400 to-green-600 hover:from-green-500 hover:to-green-700 shadow-lg shadow-green-500/50 transition-all duration-300 ease-in-out transform hover:scale-105" data-aos="zoom-in" data-aos-delay="400">
@@ -142,7 +141,7 @@
       <h3 class="text-2xl sm:text-3xl font-semibold flex items-center justify-center lg:justify-start gap-3 text-green-400">
         <i class="fas fa-user-circle text-green-500 text-3xl"></i> Who Am I?
       </h3>
-      <p class="text-base sm:text-lg text-gray-300 leading-relaxed max-w-xl mx-auto lg:mx-0">
+      <p class="text-base sm:text-lg text-white leading-relaxed max-w-xl mx-auto lg:mx-0">
         Hello! Aku adalah seorang <span class="font-semibold text-green-400">Frontend Developer</span> yang antusias membangun tampilan web yang elegan, interaktif, dan mobile-friendly. Aku berpengalaman menggunakan <span class="font-semibold text-green-400">React, Tailwind CSS</span>, dan <span class="font-semibold text-green-400">JavaScript</span>.
         <br><br>
         Aku percaya bahwa teknologi yang dipadukan dengan desain yang menarik bisa menciptakan pengalaman pengguna yang luar biasa. Di luar coding, aku suka baca hal random, eksperimen UI tengah malam, dan nyeduh kopi sambil nyari inspirasi.
