--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- AOS Animation CSS -->
+<link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
+<!-- Style Skill Card -->
+<style>
+  .skill-border {
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    border-radius: 1rem;
+    padding: 1.25rem;
+    background: rgba(255, 255, 255, 0.02);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .skill-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.75rem;
+    color: white;
+  }
+
+  .skill-border:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 10px 25px rgba(0, 255, 135, 0.2);
+    border-color: rgba(0, 255, 135, 0.3);
+  }
+
+  .skill-card img {
+    width: 48px;
+    height: 48px;
+    object-fit: contain;
+  }
+</style>
+
   <style>
     .skill-border {
   position: relative;
@@ -105,6 +139,7 @@
 <section id="home" class="relative flex flex-col lg:flex-row items-center justify-between gap-12 px-6 lg:px-20 pt-32 pb-20 bg-cover bg-center min-h-screen"
   style="background-image: url('asset/bg1.jpg');">
   
+
   <!-- Left Content -->
   <div class="lg:w-1/2 flex flex-col items-center lg:items-start text-center lg:text-left space-y-6 z-10" data-aos="fade-right">
     <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight tracking-wide text-white drop-shadow-lg" data-aos="fade-up">
@@ -158,70 +193,73 @@
 <!-- Skills Section -->
 <section id="skills" class="bg-gray-950 py-24 px-6 lg:px-20">
   <div class="max-w-7xl mx-auto text-center">
-    <h2 class="text-4xl sm:text-5xl font-extrabold text-white mb-16" data-aos="fade-up">
+    <h2 class="text-4xl sm:text-5xl font-extrabold text-white mb-16" data-aos="fade-up" data-aos-duration="800">
       My <span class="bg-gradient-to-r from-green-400 to-white bg-clip-text text-transparent">Skills</span>
     </h2>
 
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6">
-      <!-- Contoh Skill -->
-      <div class="skill-border" data-aos="zoom-in" data-aos-delay="100">
+      <!-- Skill Item HTML -->
+      <div class="skill-border" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5">
           <p class="text-sm sm:text-base font-medium">HTML5</p>
         </div>
       </div>
-<div class="skill-border" data-aos="zoom-in" data-aos-delay="200">
+
+      <!-- CSS -->
+      <div class="skill-border" data-aos="fade-up" data-aos-delay="200" data-aos-duration="700">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3">
           <p>CSS3</p>
         </div>
       </div>
 
-      <!-- Skill Item Bootstrap -->
-      <div class="skill-border" data-aos="zoom-in" data-aos-delay="300">
+      <!-- Bootstrap -->
+      <div class="skill-border" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="700">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt="Bootstrap">
           <p>Bootstrap</p>
         </div>
       </div>
 
-      <!-- Skill Item Tailwind -->
-      <div class="skill-border" data-aos="zoom-in" data-aos-delay="400">
+      <!-- Tailwind -->
+      <div class="skill-border" data-aos="zoom-in" data-aos-delay="400" data-aos-duration="700">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-original.svg" alt="Tailwind CSS">
           <p>Tailwind CSS</p>
         </div>
       </div>
 
-      <!-- Skill Item JavaScript -->
-      <div class="skill-border" data-aos="zoom-in" data-aos-delay="500">
+      <!-- JavaScript -->
+      <div class="skill-border" data-aos="flip-left" data-aos-delay="500" data-aos-duration="700">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
           <p>JavaScript</p>
         </div>
       </div>
 
-      <!-- Skill Item PHP -->
-      <div class="skill-border" data-aos="zoom-in" data-aos-delay="600">
+      <!-- PHP -->
+      <div class="skill-border" data-aos="flip-right" data-aos-delay="600" data-aos-duration="700">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
           <p>PHP</p>
         </div>
       </div>
 
-      <!-- Skill Item Laravel -->
-      <div class="skill-border" data-aos="zoom-in" data-aos-delay="700">
+      <!-- Laravel -->
+      <div class="skill-border" data-aos="zoom-in-up" data-aos-delay="700" data-aos-duration="700">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" alt="Laravel">
           <p>Laravel</p>
         </div>
       </div>
-      
     </div>
   </div>
 </section>
+
 <!-- Project Section -->
-<section id="projects" class="bg-gray-950 py-20 px-6 lg:px-20">
+<section id="projects" class="bg-gray-950 py-20 px-6 lg:px-20" 
+>
   <div class="max-w-6xl mx-auto text-center">
     <h2 class="text-4xl font-extrabold text-white mb-16 tracking-wide">
       My <span class="bg-gradient-to-r from-green-400 to-white bg-clip-text text-transparent">Projects</span>
@@ -569,6 +607,17 @@ const form = document.getElementById("contactForm");
     }
   });
 </script>
+
+<!-- AOS Animation JS -->
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init({
+    once: true,         // animasi hanya sekali saat scroll pertama
+    duration: 700,      // default durasi animasi
+    offset: 120,        // jarak scroll sebelum animasi jalan
+  });
+</script>
+
 
 </body>
 </html>
