--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="src/output.css" rel="stylesheet">
   <title>Portofolio Eliya</title>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- AOS Animation CSS -->
 <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
@@ -104,6 +105,8 @@
   </style>
 </head>
 <body class="bg-gray-900 text-green-400 min-h-screen">
+<audio id="helloSound" src="https://www.myinstants.com/en/instant/helloo-mp3-58402/?utm_source=copy&utm_medium=share"></audio>
+<audio id="yeaySound" src="https://www.myinstants.com/en/instant/yeay-childrens-8842/?utm_source=copy&utm_medium=share"></audio>
 
 <!-- Navbar -->
 <nav class="flex items-center justify-between px-6 py-4 bg-gray-800 shadow-md fixed top-0 left-0 right-0 z-50">
@@ -126,12 +129,12 @@
 
   <!-- Navigation Menu -->
   <ul id="menu" class="hidden flex-col md:flex md:flex-row md:items-center space-y-4 md:space-y-0 md:space-x-6 text-sm absolute md:static top-16 left-0 w-full md:w-auto bg-gray-800 md:bg-transparent px-6 md:px-0 py-4 md:py-0 shadow-md md:shadow-none z-40 transition-all duration-300 ease-in-out">
-    <li><a href="#home" class="text-white hover:text-green-300 transition duration-300 block">Home</a></li>
-    <li><a href="#about" class="text-white hover:text-green-300 transition duration-300 block">About</a></li>
-    <li><a href="#skills" class="text-white hover:text-green-300 transition duration-300 block">Skill</a></li>
-    <li><a href="#projects" class="text-white hover:text-green-300 transition duration-300 block">Project</a></li>
-    <li><a href="#sertifikat" class="text-white hover:text-green-300 transition duration-300 block">Sertifikat</a></li>
-    <li><a href="#kontak" class="text-white hover:text-green-300 transition duration-300 block">Contact</a></li>
+    <li><a href="#home" class="text-white hover:text-green-300 transition duration-300 block">HOME</a></li>
+    <li><a href="#about" class="text-white hover:text-green-300 transition duration-300 block">ABOUT</a></li>
+    <li><a href="#skills" class="text-white hover:text-green-300 transition duration-300 block">SKILL</a></li>
+    <li><a href="#projects" class="text-white hover:text-green-300 transition duration-300 block">PROJECT</a></li>
+    <li><a href="#sertifikat" class="text-white hover:text-green-300 transition duration-300 block">CERTIFICATE</a></li>
+    <li><a href="#kontak" class="text-white hover:text-green-300 transition duration-300 block">CONTACT</a></li>
   </ul>
 </nav>
 
@@ -177,9 +180,9 @@
         <i class="fas fa-user-circle text-green-500 text-3xl"></i> Who Am I?
       </h3>
       <p class="text-base sm:text-lg text-white leading-relaxed max-w-xl mx-auto lg:mx-0">
-        Hello! Aku adalah seorang <span class="font-semibold text-green-400">Frontend Developer</span> yang antusias membangun tampilan web yang elegan, interaktif, dan mobile-friendly. Aku berpengalaman menggunakan <span class="font-semibold text-green-400">React, Tailwind CSS</span>, dan <span class="font-semibold text-green-400">JavaScript</span>.
+        Hello! Aku adalah seorang <span class="font-semibold text-green-400">Frontend Developer</span> yang antusias membangun tampilan web yang elegan, interaktif, dan mobile-friendly. Aku berpengalaman menggunakan <span class="font-semibold text-green-400">Tailwind CSS</span>, dan <span class="font-semibold text-green-400">JavaScript</span>.
         <br><br>
-        Aku percaya bahwa teknologi yang dipadukan dengan desain yang menarik bisa menciptakan pengalaman pengguna yang luar biasa. Di luar coding, aku suka baca hal random, eksperimen UI tengah malam, dan nyeduh kopi sambil nyari inspirasi.
+        Aku percaya bahwa teknologi yang dipadukan dengan desain yang menarik bisa menciptakan pengalaman pengguna yang luar biasa. Di luar coding, aku suka menggambar, eksperimen UI, dan bersantai sambil nyari inspirasi.
       </p>
       <div class="pt-4">
         <a href="asset/CV ELIYA.pdf" target="_blank" class="inline-flex items-center gap-3 px-8 py-3 rounded-full font-semibold text-white bg-gradient-to-r from-green-500 to-teal-500 hover:from-green-600 hover:to-teal-600 shadow-md shadow-green-500/40 transition-all duration-300 hover:scale-105">
@@ -541,7 +544,6 @@
   </div>
 </footer>
 
-
 <!-- Menu Toggle Script -->
 <script>
   document.addEventListener('DOMContentLoaded', function () {
@@ -593,18 +595,34 @@ const form = document.getElementById("contactForm");
 
       Swal.fire({
         icon: 'success',
-        title: 'Sent!',
-        text: 'Your message has been sent successfully.',
+        title: 'Terkirim!',
+        text: 'Terima kasih udah kirim pesan, Tungguin ya, aku bakal respon secepat mungkin.',
         confirmButtonColor: '#10B981' // Tailwind green-500
       });
     } else {
       Swal.fire({
         icon: 'error',
         title: 'Oops...',
-        text: 'Something went wrong. Please try again later.',
+        text: 'Sepertinya ada yang salah saat ngirim pesan. Coba cek koneksi kamu atau ulangi beberapa saat lagi yaa!.',
         confirmButtonColor: '#EF4444' // Tailwind red-500
       });
     }
+  });
+  // Play sound saat halaman dimuat
+  window.addEventListener('DOMContentLoaded', () => {
+    document.getElementById('helloSound').play();
+  });
+
+  // Fungsi untuk play sound setelah kirim pesan
+  function playThankYou() {
+    document.getElementById('yeaySound').play();
+  }
+
+  // Contoh trigger setelah submit form
+  document.getElementById('contactForm').addEventListener('submit', (e) => {
+    e.preventDefault();
+    // aksi submit di sini
+    playThankYou();
   });
 </script>
 
@@ -617,7 +635,5 @@ const form = document.getElementById("contactForm");
     offset: 120,        // jarak scroll sebelum animasi jalan
   });
 </script>
-
-
 </body>
 </html>
