--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- AOS Animation CSS -->
-<link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
 <!-- Style Skill Card -->
 <style>
@@ -144,11 +142,11 @@
   
 
   <!-- Left Content -->
-  <div class="lg:w-1/2 flex flex-col items-center lg:items-start text-center lg:text-left space-y-6 z-10" data-aos="fade-right">
-    <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight tracking-wide text-white drop-shadow-lg" data-aos="fade-up">
+  <div class="lg:w-1/2 flex flex-col items-center lg:items-start text-center lg:text-left space-y-6 z-10">
+    <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight tracking-wide text-white drop-shadow-lg">
       I'm <span class="text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-lime-300 to-white animate-gradient">ELIYA NUR AR RAHMADAN</span>
     </h1>
-    <p class="text-white text-lg md:text-xl font-medium max-w-xl drop-shadow" data-aos="fade-up" data-aos-delay="200">
+    <p class="text-white text-lg md:text-xl font-medium max-w-xl drop-shadow" >
       Membuat Website yang Kreatif, Responsif, dan Interaktif untuk mendukung Transformasi Digital yang Lebih Baik.
     </p>
     <a href="#kontak" class="mt-4 inline-block px-8 py-3 rounded-full font-semibold text-white bg-gradient-to-r from-green-400 to-green-600 hover:from-green-500 hover:to-green-700 shadow-lg shadow-green-500/50 transition-all duration-300 ease-in-out transform hover:scale-105" data-aos="zoom-in" data-aos-delay="400">
@@ -157,7 +155,7 @@
   </div>
 
   <!-- Right Content -->
-  <div class="lg:w-1/2 flex justify-center z-10" data-aos="fade-left">
+  <div class="lg:w-1/2 flex justify-center z-10">
     <div class="relative group">
       <img src="asset/PROFIL.png" alt="Foto Eliya" class="w-[320px] sm:w-[400px] md:w-[480px] h-auto object-cover rounded-3xl shadow-[0_0_60px_15px_rgba(34,197,94,0.5)] transition-transform duration-500 transform group-hover:scale-105">
     </div>
@@ -168,13 +166,13 @@
 <section id="about" class="bg-gray-950 text-green-300 py-24 px-6 lg:px-20">
   <div class="max-w-7xl mx-auto flex flex-col-reverse lg:flex-row items-center justify-between gap-16">
     <!-- Image -->
-    <div class="lg:w-1/2 flex justify-center" data-aos="fade-right">
+    <div class="lg:w-1/2 flex justify-center">
       <div class="w-72 h-72 lg:w-80 lg:h-80 rounded-3xl overflow-hidden border-4 border-green-500 shadow-xl shadow-green-400/30 transition-transform duration-300 hover:scale-105">
         <img src="asset/Profill (2).png" alt="Eliya's Photo" class="w-full h-full object-cover object-top" />
       </div>
     </div>
     <!-- Text -->
-    <div class="lg:w-1/2 space-y-8 text-center lg:text-left px-4" data-aos="fade-left">
+    <div class="lg:w-1/2 space-y-8 text-center lg:text-left px-4" >
       <h2 class="text-4xl sm:text-5xl font-extrabold text-white leading-tight">About <span class="bg-gradient-to-r from-green-400 to-white bg-clip-text text-transparent">Me</span></h2>
       <h3 class="text-2xl sm:text-3xl font-semibold flex items-center justify-center lg:justify-start gap-3 text-green-400">
         <i class="fas fa-user-circle text-green-500 text-3xl"></i> Who Am I?
@@ -196,13 +194,13 @@
 <!-- Skills Section -->
 <section id="skills" class="bg-gray-950 py-24 px-6 lg:px-20">
   <div class="max-w-7xl mx-auto text-center">
-    <h2 class="text-4xl sm:text-5xl font-extrabold text-white mb-16" data-aos="fade-up" data-aos-duration="800">
+    <h2 class="text-4xl sm:text-5xl font-extrabold text-white mb-16">
       My <span class="bg-gradient-to-r from-green-400 to-white bg-clip-text text-transparent">Skills</span>
     </h2>
 
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6">
       <!-- Skill Item HTML -->
-      <div class="skill-border" data-aos="fade-up" data-aos-delay="100" data-aos-duration="700">
+      <div class="skill-border" >
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5">
           <p class="text-sm sm:text-base font-medium">HTML5</p>
@@ -210,7 +208,7 @@
       </div>
 
       <!-- CSS -->
-      <div class="skill-border" data-aos="fade-up" data-aos-delay="200" data-aos-duration="700">
+      <div class="skill-border">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3">
           <p>CSS3</p>
@@ -218,7 +216,7 @@
       </div>
 
       <!-- Bootstrap -->
-      <div class="skill-border" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="700">
+      <div class="skill-border">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt="Bootstrap">
           <p>Bootstrap</p>
@@ -226,7 +224,7 @@
       </div>
 
       <!-- Tailwind -->
-      <div class="skill-border" data-aos="zoom-in" data-aos-delay="400" data-aos-duration="700">
+      <div class="skill-border">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-original.svg" alt="Tailwind CSS">
           <p>Tailwind CSS</p>
@@ -234,7 +232,7 @@
       </div>
 
       <!-- JavaScript -->
-      <div class="skill-border" data-aos="flip-left" data-aos-delay="500" data-aos-duration="700">
+      <div class="skill-border">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
           <p>JavaScript</p>
@@ -242,7 +240,7 @@
       </div>
 
       <!-- PHP -->
-      <div class="skill-border" data-aos="flip-right" data-aos-delay="600" data-aos-duration="700">
+      <div class="skill-border">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
           <p>PHP</p>
@@ -250,7 +248,7 @@
       </div>
 
       <!-- Laravel -->
-      <div class="skill-border" data-aos="zoom-in-up" data-aos-delay="700" data-aos-duration="700">
+      <div class="skill-border">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" alt="Laravel">
           <p>Laravel</p>
@@ -608,32 +606,7 @@ const form = document.getElementById("contactForm");
       });
     }
   });
-  // Play sound saat halaman dimuat
-  window.addEventListener('DOMContentLoaded', () => {
-    document.getElementById('helloSound').play();
-  });
-
-  // Fungsi untuk play sound setelah kirim pesan
-  function playThankYou() {
-    document.getElementById('yeaySound').play();
-  }
-
-  // Contoh trigger setelah submit form
-  document.getElementById('contactForm').addEventListener('submit', (e) => {
-    e.preventDefault();
-    // aksi submit di sini
-    playThankYou();
-  });
-</script>
-
-<!-- AOS Animation JS -->
-<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-<script>
-  AOS.init({
-    once: true,         // animasi hanya sekali saat scroll pertama
-    duration: 700,      // default durasi animasi
-    offset: 120,        // jarak scroll sebelum animasi jalan
-  });
+  
 </script>
 </body>
 </html>
