--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!-- Tambahkan di akhir sebelum </body> -->
 <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
+
 
 
 <!-- Style Skill Card -->
@@ -98,15 +100,6 @@
     background-position: 0% 50%;
   }
 }
-
-    .animate-gradient {
-      background-size: 200% auto;
-      animation: gradientMove 3s linear infinite;
-    }
-    @keyframes gradientMove {
-      0% { background-position: 0% center; }
-      100% { background-position: 200% center; }
-    }
 
   /* Animasi Fade In */
   @keyframes fadeIn {
@@ -215,26 +208,37 @@
 
 <!-- Home Section -->
 <section id="home" class="relative flex flex-col lg:flex-row items-center justify-between gap-12 px-6 lg:px-20 pt-32 pb-20 bg-cover bg-center min-h-screen"
-  style="background-image: url('asset/bg1.jpg');">
+  style="background-image: url('asset/bg3.png');">
   
 
   <!-- Left Content -->
   <div class="lg:w-1/2 flex flex-col items-center lg:items-start text-center lg:text-left space-y-6 z-10">
-    <h1 class="fade-in-on-scroll text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight tracking-wide text-white drop-shadow-lg">
-      I'm <span class="text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-lime-300 to-white animate-gradient">ELIYA NUR AR RAHMADAN</span>
-    </h1>
-    <p class="fade-up-on-scroll text-white text-lg md:text-xl font-medium max-w-xl drop-shadow" >
-      Membuat Website yang Kreatif, Responsif, dan Interaktif untuk mendukung Transformasi Digital yang Lebih Baik.
-    </p>
-    <a href="#kontak" class="mt-4 inline-block px-8 py-3 rounded-full font-semibold text-white bg-gradient-to-r from-green-400 to-green-600 hover:from-green-500 hover:to-green-700 shadow-lg shadow-green-500/50 transition-all duration-300 ease-in-out transform hover:scale-105" data-aos="zoom-in" data-aos-delay="400">
-      Hubungi Saya
-    </a>
-  </div>
+  <!-- Judul -->
+  <h1 class="fade-in-on-scroll text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight tracking-wide text-white drop-shadow-lg"
+     style="font-family: 'Space Grotesk', sans-serif;">
+    I'm <span class="text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-white animate-gradient">Eliya Nur Ar Rahmadan</span>
+  </h1>
+
+  <!-- Animasi Ketik -->
+  <h2 class="text-green-300 text-2xl md:text-3xl font-semibold h-10">
+    <span id="typed-text"></span><span class="border-r-2 border-green-300 animate-pulse ml-1"></span>
+  </h2>
+
+  <!-- Deskripsi -->
+  <p class="fade-up-on-scroll text-white text-lg md:text-xl font-medium max-w-xl drop-shadow">
+    Membuat Website yang Kreatif, Responsif, dan Interaktif untuk mendukung Transformasi Digital yang Lebih Baik.
+  </p>
+
+  <!-- Tombol -->
+  <a href="#kontak" class="mt-4 inline-block px-8 py-3 rounded-full font-semibold text-white bg-gradient-to-r from-green-400 to-green-600 hover:from-green-500 hover:to-green-700 shadow-lg shadow-green-500/50 transition-all duration-300 ease-in-out transform hover:scale-105" data-aos="zoom-in" data-aos-delay="400">
+    Hubungi Saya
+  </a>
+</div>
 
   <!-- Right Content -->
   <div class="slide-right-on-scroll lg:w-1/2 flex justify-center z-10">
     <div class="relative group">
-      <img src="asset/PROFIL.png" alt="Foto Eliya" class="w-[320px] sm:w-[400px] md:w-[480px] h-auto object-cover rounded-3xl shadow-[0_0_60px_15px_rgba(34,197,94,0.5)] transition-transform duration-500 transform group-hover:scale-105">
+      <img src="asset/Profil3.png" alt="Foto Eliya">
     </div>
   </div>
 </section>
@@ -244,9 +248,7 @@
   <div class="max-w-7xl mx-auto flex flex-col-reverse lg:flex-row items-center justify-between gap-16">
     <!-- Image -->
     <div class="lg:w-1/2 flex justify-center fade-in-on-scroll">
-      <div class="hexagon w-72 h-72 lg:w-80 lg:h-80 rounded-3xl overflow-hidden border-4 border-green-500 shadow-xl shadow-green-400/30 transition-transform duration-300 hover:scale-105">
-        <img src="asset/Profill (2).png" alt="Eliya's Photo" class="w-full h-full object-cover object-top" />
-      </div>
+        <img src="asset/Profil3.png" alt="Eliya's Photo" class="w-full h-full object-cover object-top" />
     </div>
     <!-- Text -->
     <div class="lg:w-1/2 space-y-8 text-center lg:text-left px-4 fade-up-on-scroll" >
@@ -726,9 +728,43 @@ const form = document.getElementById("contactForm");
 
 </script>
 <script>
+  const texts = ["Frontend Developer"];
+  let count = 0;
+  let index = 0;
+  let currentText = "";
+  let isDeleting = false;
+  const speed = 100;
+
+  function typeEffect() {
+    const typedText = document.getElementById("typed-text");
+
+    if (count >= texts.length) count = 0;
+    currentText = texts[count];
+
+    if (isDeleting) {
+      typedText.innerHTML = currentText.substring(0, index--);
+    } else {
+      typedText.innerHTML = currentText.substring(0, index++);
+    }
+
+    if (!isDeleting && index === currentText.length + 1) {
+      isDeleting = true;
+      setTimeout(typeEffect, 1000); // jeda sebelum menghapus
+    } else if (isDeleting && index === 0) {
+      isDeleting = false;
+      count++;
+      setTimeout(typeEffect, 500); // jeda sebelum mengetik kata baru
+    } else {
+      setTimeout(typeEffect, speed);
+    }
+  }
+
+  window.addEventListener("DOMContentLoaded", typeEffect);
+</script>
+<script>
  tsParticles.load("tsparticles", {
   background: {
-    color: "#0f172a",
+    color: "#000000",
   },
   particles: {
     number: { value: 50 },
